# granite-webhooks

./: Cargo.toml  Makefile  README.md
.cursor/: settings.json
.cursor/rules/: The-path-to-a-different-repo.mdc
common/: Cargo.toml
common/src/: lib.rs
common/src/amazon/: email.rs
common/src/crud/: email_template.rs  mod.rs  notifications.rs  scheduled_emails.rs  setup.rs  template.rs  user.rs
common/src/telegram/: crm.rs
migrations/: 20251119013059_initial_schema.sql  20251120161500_11-20.sql  20251120162004_21-40.sql  20251120163127_41-60.sql  20251120163759_61-80.sql  20251120164131_81-100.sql  20251120164443_100-110.sql  20251125235054_alter-company-add-url-domain.sql  20251127165947_alter-emails.sql  20251127184800_alter-email-add-deal-id.sql  20251127200735_alter-emails-subject.sql  20251128125101_add_partners_indexes.sql  20251128213355_alter-slab-inventory-add-deleted-at.sql  20251128234912_alter-stones-add-deleted_at.sql  20251203001931_alter-stones-add-regular-stock.sql  20251203232916_alter-sinks&faucets-add-regular-stock.sql  20251203232916_alter-sinks&faucets-types-add-regular-stock.sql  20251214164227_teach-mode.sql  20251214171432_alter-emails-add-employee-read-at.sql  20251216212148_email-attachments.sql  20251228175511_cloudtalk.sql  20260113125040_email_templates.sql  20260114001238_customer_surveys.sql  20260114001559_add-email-to-checklists.sql  20260114102213_email_template_subject.sql  20260115010706_alter-add-parent_id.sql  20260117003824_group-list.sql  20260118173618_default-group-list.sql  20260120000309_alter-customers-add-phone-2.sql  20260122232906_alter-group-list-is-default.sql  20260123005444_cloudtalk-long-secret.sql  20260124005838_alter-deals-add-is-won.sql  20260129012124_delete-list-4,5.sql  20260202071953_deal_stage_history.sql  20260202130612_deal_activities.sql  20260207004929_alter-customer-survey-add-installer-id.sql  20260215224329_alter-users-add-email-name.sql  20260218140321_notifications_add_deal_id.sql  20260219212757_add_deal_activities_created_by.sql  20260219232405_transfer_deal_descriptions_to_deal_activities.sql  (+67 more)
src/: main.rs
src/amazon/: bucket.rs  email.rs  mod.rs
src/amazonses/: mod.rs  parse_email.rs  process.rs  routes.rs  schemas.rs
src/axum_helpers/: axum_app.rs  guards.rs
src/cloudtalk/: receive.rs  schemas.rs
src/crud/: company.rs  email.rs  leads.rs  mod.rs  user_position.rs  users.rs
src/google/: maps.rs
src/libs/: constants.rs  leads.rs  mod.rs  types.rs
src/middleware/: request_logger.rs
src/posthog/: client.rs  event.rs  mod.rs
src/schemas/: add_customer.rs  documenso.rs  mod.rs  state.rs
src/telegram/: receive.rs  send.rs  utils.rs
src/tests/: mod.rs  telegram.rs  utils.rs
src/webhooks/: receive.rs  receivers.rs
time-triggered/: Cargo.toml  README.md
time-triggered/src/: generic_handler.rs  main.rs  schemas.rs
webhooks/: Cargo.toml
webhooks/src/: main.rs
(+82 files in other folders)
