[package]
name = "granite-webhooks"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
lambda_http = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql"] }

openssl-sys = { version = "0.9", features = ["vendored"] }
http-body-util = "0.1.3"
aws-sdk-sesv2 = "1"
teloxide = { version = "0.17", features = ["macros"] }
rand = "0.9.2"
aws-config = "1.8.6"
reqwest = "0.12.23"
sha2 = "0.10.9"
thiserror = "2.0.16"
